fixed minor layout issues

--- a/css/projects-queries.css
+++ b/css/projects-queries.css
@@ -13,11 +13,6 @@
         font-size: 56.25%;
     }
 
-    ul,
-    ol {
-        font-size: 1.6rem;
-    }
-
     .nav-links {
         gap: 2.2rem;
     }
@@ -146,6 +141,11 @@
         font-size: 1.6rem;
         line-height: 1.6;
         margin-bottom: 1.6rem;
+    }
+
+    ul li,
+    ol li {
+        font-size: 1.6rem;
     }
 
     li {
