--- a/css/style.css
+++ b/css/style.css
@@ -740,12 +740,12 @@
 
 /* ---------- SECTION PROJECTS ---------- */
 .header--projects {
-    margin-bottom: 3.6rem;
+    margin-bottom: 6.4rem;
 }
 
-.projects--featured .subheader--projects {
+/* .projects--featured .subheader--projects {
     margin-top: 3.2rem;
-}
+} */
 
 .projects--featured {
     display: flex;
